--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Lucile DESSAY's CV</title>
 		<meta name="Lucile's CV" content="Welcome to Lucile DESSAY's CV">
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</HEAD>
 	<body>
 	<div class="container">
