--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h2>👩 About me 👩</h2>
 			<p>🎂 23 Years Old</p>
 			<p>📣 French</p>
-			<p>Currently doing a master in digital marketing at Kedge Business Shcool.
+			<p>Currently doing a master in digital marketing at Kedge Business School.
 			Very passionate about travelling and photograpgy, I have a broad cultural background due to several
 			expatriations in Lybia, Brazil, Spain and Latvia.
 			I studied international business before specilizing myself into digital marketing.</p>
