--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<p>🎂 23 Years Old</p>
 			<p>📣 French</p>
 			<p>Currently doing a master in digital marketing at Kedge Business School.
-			Very passionate about travelling and photograpgy, I have a broad cultural background due to several
-			expatriations in Lybia, Brazil, Spain and Latvia.
+			Very passionate about travelling and photography, I have a broad cultural background due to several
+			expatriations: Lybia, Brazil, Spain and Latvia.
 			I studied international business before specilizing myself into digital marketing.</p>
 			<p>Please feel free to contact me</p>
 		</div>
